CHANGES
=======

4.0.0 (unreleased)
-------------------

- Replaced deprecated ``zope.component.adapts`` usage with equivalent
  ``zope.component.adapter`` decorator.

- Replaced deprecated ``zope.interface.implements`` usage with equivalent
  ``zope.interface.implementer`` decorator.

- Dropped support for Python 2.4 and 2.5.


3.13.0 (2011-11-17)
-------------------

- Fix error when no charset matches form data and HTTP_ACCEPT_CHARSET contains a ``*``.
- Add test convenience helper ``create_interaction`` and ``with interaction()``.


3.12.6 (2010-12-17)
-------------------

- Uploading a non-CRLF version to pypi.


3.12.5 (2010-12-14)
-------------------

- Renamed the ``tests`` extra to ``test``.

- Added a test for our own configure.zcml.

- As per W3C spec UTF-8 will be the charset if the browser does not set a header.

3.12.4 (2010-07-15)
-------------------

- LP #131460: Make principal logging unicode safe.
- Remove use of string exceptions in tests, http://bugs.debian.org/585343
- Add IStartRequestEvent and StartRequestEvent for using in
  zope.app.publication (matching up with IEndRequestEvent and EndRequestEvent).
  This included refactoring to produce one definition of 'event with a request'
  - IRequestEvent.

3.12.3 (2010-04-30)
-------------------

- LP #209440: Don't obscure original exception when handling retries
  in ``publish.publish()`` with ``handleErrors == False``.   This change
  makes debugging such exception in unit tests easier.
  Thanks to James Henstridge for the patch.

- LP #98395: allow unicode output of XML content whose mimetype does not
  begin with ``text/``, per RFC 3023 as well as for content types ending
  in ``+xml`` such as Mozilla XUL's ``application/vnd+xml``.  Thanks to
  Justin Ryan for the patch.

3.12.2 (2010-04-16)
-------------------

- Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest'.

- Fixed bug where xml-rpc requests would hang when served using
  paster.httpserver.

3.12.1 (2010-02-21)